--- a/pazmain/package.json
+++ b/pazmain/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.8.4",
     "pinia": "^2.2.4",
     "vue": "^3.4.37",
