--- a/pazmain/package.json
+++ b/pazmain/package.json
@@ -14,6 +14,8 @@
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.4",
     "pinia": "^2.2.4",
+    "pinia-plugin-persist": "^1.0.0",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5",
     "vuex": "^4.0.2"
